--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build: ./platform
     volumes:
-      - ./app:/code/app
+      - ./platform:/platform
     ports:
       - "80:80"
     environment:
