--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,14 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      DB_HOST: "db:5433" # Includes port number
     command: uvicorn main:app --host 0.0.0.0 --reload --port 80
 
   db:
     image: postgres
     restart: always
+    expose:
+    - "5433"
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
